--- a/main_app/templates/main_app/footer.html
+++ b/main_app/templates/main_app/footer.html
@@ -1,5 +1,5 @@
 <footer class="main-footer">
-    <strong>Designed and Developed by  <a href="naveenbabu.codes">Naveen Babu</a>.</strong>
+    <strong>Designed and Developed by  <a href="naveenbabu.codes target="_blank"">Naveen Babu</a>.</strong>
     &copy; 2021-{% now "Y" %}
     <div class="float-right d-none d-sm-inline-block">
         <b>Version</b> 1.0.0
