--- a/main_app/templates/main_app/login.html
+++ b/main_app/templates/main_app/login.html
@@ -24,7 +24,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <p><a href="https://www.aknu.edu.in/" target="_blank" rel="noopener noreferrer">ADIKAVI NANNAYA UNIVERSITY</a></p>
+            <h3><a href="https://www.aknu.edu.in/" target="_blank" rel="noopener noreferrer">ADIKAVI NANNAYA UNIVERSITY MSN CAMPUS</a></h3>
 
 
         </div>
