--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -32,6 +32,10 @@
     {% block custom_css %}
 
     {% endblock custom_css %}
+    <style type="text/css">
+        h1{ color: blueviolet;
+         }
+    </style>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -45,7 +49,9 @@
                     <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
                 </li>
 
+            <li> <h1>Adikavi Nannaya University Msn Campus<h1></li>
             </ul>
+
 
 
         </nav>
