--- a/main_app/templates/main_app/sidebar_template.html
+++ b/main_app/templates/main_app/sidebar_template.html
@@ -5,7 +5,7 @@
     <a href="{% url 'admin_home' %}" class="brand-link">
         <img src="{% static 'dist/img/AdminLTELogo.png' %} "
             class="brand-image img-circle elevation-3" style="opacity: .8">
-        <span class="brand-text font-weight-light">Admin Panel</span>
+        <span class="brand-text font-weight-light">Admin panel</span>
     </a>
 
     <!-- Sidebar -->
@@ -318,16 +318,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="nav-item">
-                    {% url 'staff_notify_student' as staff_notify_student %}
-                    <a href="{{staff_notify_student}}" class="nav-link {% if staff_notify_student == request.path %} active {% endif %}">
-                        <i class="nav-icon fas fa-th"></i>
-                        <p>
-                            Notify Student
-
-                        </p>
-                    </a>
-                </li>
+                
                 <li class="nav-item">
                     {% url 'staff_view_notification' as staff_view_notification %}
                     <a href="{{staff_view_notification}}" class="nav-link {% if staff_view_notification == request.path %} active {% endif %}">
