--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -33,7 +33,7 @@
 
     {% endblock custom_css %}
     <style type="text/css">
-        h1{ color: blueviolet;
+        h2{ color: blueviolet;
          }
     </style>
 </head>
@@ -49,7 +49,9 @@
                     <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
                 </li>
 
-            <li> <h1>Adikavi Nannaya University Msn Campus<h1></li>
+            <li> <h2>ADIKAVI NANNAYA UNIVERSITY MSN CAMPUS<h2>
+                <h4>STUDENT MANAGEMENT SYSTEM<h4></li>
+
             </ul>
 
 
