--- a/main_app/templates/main_app/login.html
+++ b/main_app/templates/main_app/login.html
@@ -20,18 +20,22 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
 </head>
+<header><img src="https://raw.githubusercontent.com/Naveenbabu1/Naveenbabu/main/HEADER.png?token=AQWZECJY7UFI3TED2SVMWKLBGB2P6"></header>
 
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <h3><a href="https://www.aknu.edu.in/" target="_blank" rel="noopener noreferrer">ADIKAVI NANNAYA UNIVERSITY MSN CAMPUS</a></h3>
+            <h3><a href="https://www.aknu.edu.in/MSNCAMPUS/" target="_blank" rel="noopener noreferrer">ADIKAVI NANNAYA UNIVERSITY MSN CAMPUS</a></h3>
 
 
         </div>
         <!-- /.login-logo -->
         <div class="card">
             <div class="card-body login-card-body">
-                <p class="login-box-msg">Sign in to start your session</p>
+              <h4>  <p align="center">STUDENT MANAGEMENT SYSTEM</p></h4>
+                <p class="login-box-msg">
+                 
+              Sign in to start your session</p>
                 {% if messages %}
                 <div class="col-12">
                     {% for message in messages %}
