--- a/main_app/templates/registration/base.html
+++ b/main_app/templates/registration/base.html
@@ -20,11 +20,13 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
+<header><img src="https://raw.githubusercontent.com/Naveenbabu1/Naveenbabu/main/HEADER.png?token=AQWZECJY7UFI3TED2SVMWKLBGB2P6"></header>
 
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <b>Adikavi Nannaya University</b>
+            
+            <b>Adikavi Nannaya University Msn Campus</b>
 
         </div>
         <!-- /.login-logo -->
