--- a/main_app/templates/registration/password_reset_confirm.html
+++ b/main_app/templates/registration/password_reset_confirm.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 {% if validlink %}
+<header><img src="https://raw.githubusercontent.com/Naveenbabu1/Naveenbabu/main/HEADER.png?token=AQWZECJY7UFI3TED2SVMWKLBGB2P6"></header>
+
 <div class="card-body login-card-body">
     <p class="login-box-msg">Reset Password</p>
     <form action="" method="post">
